--- a/src/demo_ui/components/Demo/InputBar/input-bar.scss
+++ b/src/demo_ui/components/Demo/InputBar/input-bar.scss
@@ -1,7 +1,7 @@
 .search-bar {
   height: 56px;
   width: 720px;
-  margin: 30px;
+  margin: 30px auto;
   border: 1px solid rgba(27, 23, 28, 0.6);
   border-radius: 30px;
   display: flex;
