--- a/src/demo_ui/components/Demo/PredictButton/predict-button.scss
+++ b/src/demo_ui/components/Demo/PredictButton/predict-button.scss
@@ -1,18 +1,19 @@
-.search-button {
+.predict-button {
   justify-content: center;
   vertical-align: middle;
   position: relative;
   height: 20px;
   padding: 15px;
   margin: 7px;
-  color: #46cea6;
-  border: 3px solid #46cea6;
+  color: white;
+  border-radius: 6px;
   cursor: pointer;
+  background-color: gray;
 
-  transition: color .5s, background-color .5s;
+  transition: box-shadow .5s, background-color .5s;
 
   &:hover {
     background-color: #46cea6;
-    color: white;
+    box-shadow: 10px 10px 20px 2px rgba(0, 0, 0, 0.15);
   }
 }
