--- a/src/demo_ui/components/Demo/demo.scss
+++ b/src/demo_ui/components/Demo/demo.scss
@@ -1,55 +1,82 @@
 $margin: 45px;
-.live {
-  &.dash-body {
-    .tile-row {
-      .large-tile {
-        width: calc(66% - 15px);
-        margin: 0 40px 0 40px;
-        height: 800px;
 
-        .tile-body {
-          flex-direction: column;
-          margin-top: 20px;
+.demo-body {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  margin: 0 auto;
 
-          h4 {
-            margin: 15px 0;
-            &:first-child {
-              margin-top: 0;
-            }
-          }
+  h2 {
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 14px;
+    font-size: 1.8em;
+  }
 
-          .enter-text-row {
-            display:flex;
-            flex-direction:row;
-          }
+  .content {
+    width: 60%;
+    max-width: 1024px;
+    padding: 0 15%;
+    font-size: 16px;
+    margin: 4% auto;
+  }
 
-          .colour-word {
-            display: inline-block;
-            background-color: #873eff;
-            padding: 0 6px;
-            border-radius: 5px;
-            color: white;
-            margin: 0 3px;
-          }
+  .row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin: 25px 0;
+  }
+}
 
-          .search-bar {
-            margin: 5px 0;
-          }
+.intro-container {
+  display: flex;
+  flex-direction: column;
+}
 
-          .text-block {
-            width: 800px;
-          }
+.step-container {
+  display: flex;
+  flex-direction: column;
+  width: 120px;
 
-          .classification-container {
-            display: flex;
-            flex-direction: column;
+  .step, .label {
+    font-weight: bold;
+    font-size: 1.6em;
+    text-align: right;
+  }
 
-            span:first-child {
-              font-weight: bold;
-            }
-          }
-        }
-      }
+  .step {
+    color: grey;
+  }
+}
+
+.context-options {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+
+  .context-or, .context-option {
+    justify-content: center;
+    vertical-align: middle;
+    position: relative;
+    height: 20px;
+    padding: 15px;
+    margin: 7px;
+  }
+
+  .context-option {
+    border: 3px solid grey;
+    cursor: pointer;
+    transition: border .5s, box-shadow .5s;
+    border-radius: 5px;
+
+    &.active, &:hover {
+      border: 3px solid #46cea6;
+      box-shadow: 10px 10px 20px 2px rgba(0,0,0,0.15);
     }
   }
+}
+
+.button-container {
+  margin: 0 auto;
 }
