--- a/src/demo_ui/components/Demo/PredictButton/predict-button.scss
+++ b/src/demo_ui/components/Demo/PredictButton/predict-button.scss
@@ -4,7 +4,6 @@
   position: relative;
   height: 20px;
   padding: 15px;
-  margin: 7px;
   color: white;
   border-radius: 6px;
   cursor: pointer;
@@ -12,8 +11,9 @@
 
   transition: box-shadow .5s, background-color .5s;
 
-  &:hover {
-    background-color: #46cea6;
+  &:hover, &:focus {
+    background-color: #5fcf80;
     box-shadow: 10px 10px 20px 2px rgba(0, 0, 0, 0.15);
+    outline: none;
   }
 }
