--- a/src/demo_ui/components/Demo/demo.scss
+++ b/src/demo_ui/components/Demo/demo.scss
@@ -1,10 +1,10 @@
-$margin: 45px;
-
 .demo-body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
   margin: 0 auto;
+  padding: 0 15%;
+  font-size: 16px;
 
   h2 {
     text-align: center;
@@ -13,70 +13,19 @@ $margin: 45px;
     font-size: 1.8em;
   }
 
-  .content {
-    width: 60%;
-    max-width: 1024px;
-    padding: 0 15%;
-    font-size: 16px;
-    margin: 4% auto;
-  }
-
-  .row {
+  .section {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    margin: 25px 0;
-  }
-}
+    flex-direction: column;
+    margin: 25px auto 0 auto;
+    max-width:750px;
 
-.intro-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.step-container {
-  display: flex;
-  flex-direction: column;
-  width: 120px;
-
-  .step, .label {
-    font-weight: bold;
-    font-size: 1.6em;
-    text-align: right;
-  }
-
-  .step {
-    color: grey;
-  }
-}
-
-.context-options {
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto;
-
-  .context-or, .context-option {
-    justify-content: center;
-    vertical-align: middle;
-    position: relative;
-    height: 20px;
-    padding: 15px;
-    margin: 7px;
-  }
-
-  .context-option {
-    border: 3px solid grey;
-    cursor: pointer;
-    transition: border .5s, box-shadow .5s;
-    border-radius: 5px;
-
-    &.active, &:hover {
-      border: 3px solid #46cea6;
-      box-shadow: 10px 10px 20px 2px rgba(0,0,0,0.15);
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 }
 
 .button-container {
-  margin: 0 auto;
+  margin: 30px auto 0 auto;
 }
