Text/From URL input change.

--- a/src/demo_ui/components/Demo/demo.scss
+++ b/src/demo_ui/components/Demo/demo.scss
@@ -24,8 +24,8 @@
       margin-bottom: 0;
     }
   }
-}
 
-.button-container {
-  margin: 30px auto 0 auto;
+  .predict-button {
+    margin: 30px auto 0 auto;
+  }
 }
