--- a/src/demo_ui/components/Demo/InputBar/input-bar.scss
+++ b/src/demo_ui/components/Demo/InputBar/input-bar.scss
@@ -1,4 +1,4 @@
-.search-bar {
+.input-bar {
   height: 56px;
   width: 720px;
   margin: 30px 0 0 0;
@@ -7,7 +7,7 @@
   display: flex;
 
 
-  .search-input-container {
+  .input-container {
     display:inline-flex;
     height: 44px;
     width: 90%;
