Moving common elements to their own folder.

--- a/src/demo_ui/index.scss
+++ b/src/demo_ui/index.scss
@@ -13,3 +13,14 @@ body {
 #app-container {
   width: 100%;
 }
+
+.flex-grid {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  .flex-grid-third {
+    width: 32%;
+    display: flex;
+  }
+}
