--- a/src/demo_ui/components/Demo/demo.scss
+++ b/src/demo_ui/components/Demo/demo.scss
@@ -1,10 +1,13 @@
+$font-size: 16px;
+
 .demo-body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
   margin: 0 auto;
   padding: 0 15%;
-  font-size: 16px;
+  font-size: $font-size;
+  min-height: 100vh;
 
   h2 {
     text-align: center;
