--- a/src/demo_ui/components/Results/results-page.scss
+++ b/src/demo_ui/components/Results/results-page.scss
@@ -8,10 +8,34 @@ $font-size: 16px;
     justify-content: center;
     font-weight: bold;
     font-size: 1.6em;
-    text-align: center;
   }
 
-  .answer-container {
+  .answers-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
 
+    .answer {
+      display: flex;
+      flex-direction: row;
+
+      .answer-text {
+        margin-left: 10px;
+        line-height: 25px;
+      }
+    }
+
+    .answer-number {
+      width: 20px;
+      line-height: 20px;
+      height: 20px;
+      position: relative;
+      vertical-align: middle;
+      text-align: center;
+      border: 2px solid #5fcf80;
+      color: #5fcf80;
+      border-radius: 50%;
+      font-weight: bold;
+    }
   }
 }
