--- a/src/demo_ui/components/Demo/demo.scss
+++ b/src/demo_ui/components/Demo/demo.scss
@@ -23,6 +23,11 @@ $font-size: 16px;
     margin: 25px auto 0 auto;
     max-width:750px;
 
+    &.spinner-container {
+      flex-direction: row;
+      justify-content: center;
+    }
+
     &:last-child {
       margin-bottom: 0;
     }
