--- a/src/demo_ui/components/Inputs/ContextOptions/context-options.scss
+++ b/src/demo_ui/components/Inputs/ContextOptions/context-options.scss
@@ -20,8 +20,11 @@
 
     &.active, &:hover, &:focus {
       border: 3px solid #5fcf80;
-      box-shadow: 10px 10px 20px 2px rgba(0,0,0,0.15);
       outline: none;
+    }
+
+    &:hover {
+      box-shadow: 10px 10px 20px 2px rgba(0,0,0,0.15);
     }
   }
 }
