--- a/src/demo_ui/components/Demo/demo.scss
+++ b/src/demo_ui/components/Demo/demo.scss
@@ -1,4 +1,5 @@
 $font-size: 16px;
+$section-margin: 25px;
 
 .demo-body {
   display: flex;
@@ -17,7 +18,7 @@ $font-size: 16px;
   }
 
   .button {
-    margin: 30px auto 0 auto;
+    margin: $section-margin auto 0 auto;
   }
 
   .back-button {
