--- a/src/demo_ui/components/Results/WordHeat/word-heat.scss
+++ b/src/demo_ui/components/Results/WordHeat/word-heat.scss
@@ -1,5 +1,8 @@
+$section-margin: 25px;
+$border-radius: 5px;
+
 .word-heat {
-  margin-top: 30px;
+  margin-top: $section-margin;
 
   .heat-word-list {
     align-items: flex-end;
@@ -9,7 +12,7 @@
     .heat-word {
       margin: 0 0.2rem 0.1rem 0;
       border: 1px solid rgba(232, 236, 241, 0.75);
-      border-radius: 4px;
+      border-radius: $border-radius;
       padding: .1rem .3rem;
 
       &.answer-segment {
