--- a/src/demo_ui/components/Results/results-page.scss
+++ b/src/demo_ui/components/Results/results-page.scss
@@ -1,5 +1,5 @@
 $font-size: 16px;
-
+$section-margin: 25px;
 
 .results-page {
   font-size: $font-size;
@@ -11,7 +11,7 @@ $font-size: 16px;
   .answers-container {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: $section-margin;
 
     .answer {
       display: flex;
