Fixed no route changes in production. Updated docs. Fixed demo server. Updated build scripts. Fixed requirements.

--- a/src/demo_ui/components/common/inputs.scss
+++ b/src/demo_ui/components/common/inputs.scss
@@ -102,6 +102,7 @@ $section-margin: 20px;
     resize: none;
     border: none;
     border-radius: $border-radius;
+    font-size: $font-size;
 
     &:focus {
       outline: none;
